--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,3 +5,5 @@ api-version: 1.19
 authors: [ SL1907 ]
 description: Monopoly in Minecraft! Just as long as the real thing. If not, longer.
 website: https://sl1907.codes/projects/mineopoly
+depend:
+  - helper
